refactor: Migrate welcome dialog accelerators to GimpShortcutBridge and clipboard operations to GimpClipboardCompat.

--- a/app/widgets/meson.build
+++ b/app/widgets/meson.build
@@ -47,6 +47,7 @@ libappwidgets_sources = [
   'gimpchanneltreeview.c',
   'gimpcircle.c',
   'gimpclipboard.c',
+  'gimpclipboardcompat.c',
   'gimpcolorbar.c',
   'gimpcolordialog.c',
   'gimpcolordisplayeditor.c',
@@ -123,6 +124,8 @@ libappwidgets_sources = [
   'gimpextensiondetails.c',
   'gimpfgbgeditor.c',
   'gimpfgbgview.c',
+  'gimpfiledialog-backend.c',
+  'gimpfiledialog-backend-gtk3.c',
   'gimpfiledialog.c',
   'gimpfileprocview.c',
   'gimpfilleditor.c',
@@ -213,6 +216,7 @@ libappwidgets_sources = [
   'gimpsessionmanaged.c',
   'gimpsettingsbox.c',
   'gimpsettingseditor.c',
+  'gimpshortcutbridge.c',
   'gimpshortcutbutton.c',
   'gimpsizebox.c',
   'gimpstringaction.c',
