--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -700,6 +700,72 @@ meson-health:
     - sh .gitlab/run_meson_health_diff.sh
   allow_failure: true
 
+gtk4-readiness:
+  extends: .default
+  rules:
+    - <<: *CI_MERGE
+    - <<: *CI_COMMIT
+  stage: analysis
+  script:
+    - sh tools/ci/gtk4-readiness.sh
+
+b06-path-editor-modernization:
+  extends: .default
+  rules:
+    - <<: *CI_MERGE
+    - <<: *CI_COMMIT
+  stage: analysis
+  script:
+    - sh tools/ci/b06-path-editor-modernization.sh
+
+e2e-core-checklist:
+  extends: .default
+  rules:
+    - <<: *CI_MERGE
+    - <<: *CI_COMMIT
+  stage: analysis
+  script:
+    - sh tools/ci/e2e-core-checklist.sh
+
+ui-test-metrics:
+  extends: .default
+  rules:
+    - <<: *CI_MERGE
+    - <<: *CI_COMMIT
+  needs: ["gimp-debian-nonreloc"]
+  stage: analysis
+  variables:
+    GIT_STRATEGY: none
+  script:
+    - sh tools/ci/ui-test-metrics.sh
+
+ui-visual-baseline-check:
+  extends: .default
+  rules:
+    - <<: *CI_MERGE
+    - <<: *CI_COMMIT
+  stage: analysis
+  script:
+    - sh tools/ci/ui-visual-baseline-check.sh
+
+color-icc-checklist:
+  extends: .default
+  rules:
+    - <<: *CI_MERGE
+    - <<: *CI_COMMIT
+  stage: analysis
+  script:
+    - sh tools/ci/color-icc-checklist.sh
+
+gtk4-rollout-doc-check:
+  extends: .default
+  rules:
+    - <<: *CI_MERGE
+    - <<: *CI_COMMIT
+  stage: analysis
+  script:
+    - sh tools/ci/gtk4-rollout-doc-check.sh
+
 clang-format:
   extends: .default
   rules:
